#109 Further trimming down README.md